--- a/index.html
+++ b/index.html
@@ -900,11 +900,11 @@
                                     </div>
                                     <div class="badge-container">
                                         <img src="assets/hated_guns.gif" alt="Hated by Guns.lol" class="badge">
-                                        <span class="tooltip">Hated by Guns.lol</span>
+                                        <span class="tooltip">.</span>
                                     </div>
                                     <div class="badge-container">
                                         <img src="assets/hated_fakecrime.gif" alt="Hated by Fakecrime.bio" class="badge">
-                                        <span class="tooltip">Hated by Fakecrime.bio</span>
+                                        <span class="tooltip">-</span>
                                     </div>
                                     <div class="badge-container">
                                         <img src="assets/verified.gif" alt="Verified" class="badge">
@@ -959,7 +959,7 @@
             <div class="skill">
                 <div class="skill-name">
                     <img src="assets/python.png" alt="Python" class="skill-icon">
-                    <span>Python</span>
+                    <span>HTML</span>
                     <span>87%</span>
                 </div>
                 <div class="skill-bar-container">
@@ -1023,7 +1023,7 @@
 
 
     <audio id="background-music" loop>
-        <source src="assets/background_music.mp3" type="audio/mp3">
+        <source src="https://faithful-gray-iuuctrw1e4.edgeone.app/SpotiDownloader.com%20-%20Beam%20Trick%20-%20VampViolence.mp3" type="audio/mp3">
     </audio>
     <audio id="hacker-music" loop muted>
         <source src="assets/hacker_music.mp3" type="audio/mp3">
