--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAQLIV Profile</title>
+    <title>Collect0r's Profile</title>
     <style>
         * {
             margin: 0;
@@ -874,7 +874,7 @@
                 </div>
                 <div class="profile-info">
                     <div class="name-and-badges">
-                        <div id="profile-name">JAQLIV</div>
+                        <div id="profile-name">collector</div>
                         <div class="badge-box">
                             <div class="badge-box-inner">
                                 <div class="badge-group">
@@ -883,7 +883,7 @@
                                         <span class="tooltip">Staff Member</span>
                                     </div>
                                     <div class="badge-container">
-                                        <img src="assets/owner.gif" alt="Owner" class="badge">
+                                        <img src="https://regional-aquamarine-u5sg7xuhel.edgeone.app/crvt.co-bxl-discord-alt.png" alt="Owner" class="badge">
                                         <span class="tooltip">Owner</span>
                                     </div>
                                     <div class="badge-container">
@@ -927,8 +927,8 @@
             <div class="profile-footer">
 
                 <div class="social-links">
-                    <a href="https://discord.gg/motiongoats" target="_blank">
-                        <img src="assets/discord.png" alt="Discord" class="social-icon">
+                    <a href="<https://discord.com/users/1246792868186689559>" target="_blank">
+                        <img src="https://regional-aquamarine-u5sg7xuhel.edgeone.app/crvt.co-bxl-discord-alt.png" alt="Discord" class="social-icon">
                     </a>
                     <a href="https://github.com/JAQLIV" target="_blank">
                         <img src="assets/github.png" alt="GitHub" class="social-icon">
