--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
                             <div class="badge-box-inner">
                                 <div class="badge-group">
                                     <div class="badge-container">
-                                        <img src="assets/staff.gif" alt="Staff" class="badge">
+                                        <img src="https://github.com/collector-king/socials/blob/main/crvt.co-moderator.png?raw=true" alt="Staff" class="badge">
                                         <span class="tooltip">Staff Member</span>
                                     </div>
                                     <div class="badge-container">
@@ -887,31 +887,31 @@
                                         <span class="tooltip">Owner</span>
                                     </div>
                                     <div class="badge-container">
-                                        <img src="assets/partner.gif" alt="Partner" class="badge">
+                                        <img src="https://github.com/collector-king/socials/blob/main/white_replacement_full.gif?raw=true" alt="Partner" class="badge">
                                         <span class="tooltip">Partner</span>
                                     </div>
                                     <div class="badge-container">
-                                        <img src="assets/developer.png" alt="Developer" class="badge">
+                                        <img src="https://github.com/collector-king/socials/blob/main/crvt.co-staff.png?raw=true" alt="Developer" class="badge">
                                         <span class="tooltip">Developer</span>
                                     </div>
                                     <div class="badge-container">
-                                        <img src="assets/bug_bounty.gif" alt="Bug Bounty" class="badge">
+                                        <img src="https://github.com/collector-king/socials/blob/main/crvt.co-circle-sparks.png?raw=true" alt="Bug Bounty" class="badge">
                                         <span class="tooltip">Bug Bounty</span>
                                     </div>
                                     <div class="badge-container">
-                                        <img src="assets/hated_guns.gif" alt="Hated by Guns.lol" class="badge">
+                                        <img src="https://github.com/collector-king/socials/blob/main/emoticon-1669804_1280.png?raw=true" alt="Hated blue" class="badge">
                                         <span class="tooltip">.</span>
                                     </div>
                                     <div class="badge-container">
-                                        <img src="assets/hated_fakecrime.gif" alt="Hated by Fakecrime.bio" class="badge">
+                                        <img src="https://github.com/collector-king/socials/blob/main/emoticon-1669804_1280.png?raw=true" alt="Hated KOTA" class="badge">
                                         <span class="tooltip">-</span>
                                     </div>
                                     <div class="badge-container">
-                                        <img src="assets/verified.gif" alt="Verified" class="badge">
+                                        <img src="https://github.com/collector-king/socials/blob/main/crvt.co-bxs-check-square.png?raw=true" alt="Verified" class="badge">
                                         <span class="tooltip">Verified</span>
                                     </div>
                                     <div class="badge-container">
-                                        <img src="assets/rule_maker.gif" alt="Rule Maker" class="badge">
+                                        <img src="https://github.com/collector-king/socials/blob/main/crvt.co-square-round-bxl-visual-studio%20(1).png?raw=true" alt="Rule Maker" class="badge">
                                         <span class="tooltip">Rule Maker</span>
                                     </div>
                                 </div>
