--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             position: fixed;
             width: 40px;
             height: 40px;
-            background: url('assets/custom_cursor.png') no-repeat center center;
+            background: url('https://github.com/collector-king/socials/blob/main/GreyOsuCross_2.png?raw=true') no-repeat center center;
             background-size: contain;
             pointer-events: none;
             z-index: 9999;
@@ -854,7 +854,7 @@
     <div class="container">
         
         <video id="background" autoplay loop muted playsinline webkit-playsinline>
-            <source src="assets/background.mp4" type="video/mp4">
+            <source src="https://github.com/collector-king/socials/blob/main/sybau.png?raw=true" type="video/mp4">
         </video>
 
         
@@ -900,11 +900,11 @@
                                     </div>
                                     <div class="badge-container">
                                         <img src="https://github.com/collector-king/socials/blob/main/emoticon-1669804_1280.png?raw=true" alt="Hated blue" class="badge">
-                                        <span class="tooltip">.</span>
+                                        <span class="tooltip">hated by blue</span>
                                     </div>
                                     <div class="badge-container">
                                         <img src="https://github.com/collector-king/socials/blob/main/emoticon-1669804_1280.png?raw=true" alt="Hated KOTA" class="badge">
-                                        <span class="tooltip">-</span>
+                                        <span class="tooltip">hated by kota</span>
                                     </div>
                                     <div class="badge-container">
                                         <img src="https://github.com/collector-king/socials/blob/main/crvt.co-bxs-check-square.png?raw=true" alt="Verified" class="badge">
@@ -932,12 +932,6 @@
                     </a>
                     <a href="https://github.com/JAQLIV" target="_blank">
                         <img src="assets/github.png" alt="GitHub" class="social-icon">
-                    </a>
-                    <a href="https://www.youtube.com/@jaqliv" target="_blank">
-                        <img src="assets/youtube.png" alt="YouTube" class="social-icon">
-                    </a>
-                    <a href="https://www.tiktok.com/@jaqliv" target="_blank">
-                        <img src="assets/tiktok.png" alt="TikTok" class="social-icon">
                     </a>
                 </div>
 
