--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
     <div class="container">
         
         <video id="background" autoplay loop muted playsinline webkit-playsinline>
-            <source src="https://github.com/collector-king/socials/blob/main/sybau.png?raw=true" type="video/mp4">
+            <source src="https://github.com/collector-king/socials/raw/refs/heads/main/sybau.mp4" type="video/mp4">
         </video>
 
         
