--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
         <div id="hacker-overlay" class="hidden">
             
         </div>
-        <div id="snow-overlay" class="hidden">
+        <div id="snow-overlay" class="visible">
             
         </div>
 
