--- a/index.html
+++ b/index.html
@@ -794,9 +794,9 @@
 
     <div class="container">
         
-        <video id="background" autoplay loop muted playsinline webkit-playsinline>
-            <source src="https://github.com/collector-king/socials/blob/main/sybau.png?raw=true" type="video/mp4">
-        </video>
+        <image id="background" autoplay loop muted playsinline webkit-playsinline>
+            <source src="https://github.com/collector-king/socials/blob/main/sybau.png?raw=true" type="image">
+        </image>
 
         
         <div class="glitch-overlay"></div>
@@ -824,7 +824,7 @@
                                         <span class="tooltip">Staff Member</span>
                                     </div>
                                     <div class="badge-container">
-                                        <img src="https://regional-aquamarine-u5sg7xuhel.edgeone.app/crvt.co-bxl-discord-alt.png" alt="Owner" class="badge">
+                                        <img src="https://github.com/collector-king/socials/blob/main/crvt.co-falling-star.png?raw=true" alt="Owner" class="badge">
                                         <span class="tooltip">Owner</span>
                                     </div>
                                     <div class="badge-container">
