--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
     <div class="container">
         
         <image id="background" autoplay loop muted playsinline webkit-playsinline>
-            <source src="https://github.com/collector-king/socials/blob/main/sybau.png?raw=true" type="image">
+            <source src="https://github.com/collector-king/socials/blob/main/sybau.png?raw=true" type="image.png">
         </image>
 
         
