--- a/index.html
+++ b/index.html
@@ -613,6 +613,20 @@
             text-align: center;
         }
 
+        #start-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: rgba(0, 0, 0, 0.9);
+            backdrop-filter: blur(10px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 30;
+            cursor: pointer;
+        }
         
         @media (max-width: 430px) {
             
