--- a/index.html
+++ b/index.html
@@ -808,8 +808,8 @@
 
     <div class="container">
         
-        <video id="background" autoplay loop muted playsinline webkit-playsinline>
-            <source src="https://github.com/collector-king/socials/raw/refs/heads/main/sybau%20(online-video-cutter.com).mp4" type="video.mp4">
+       <video id="background" autoplay loop muted playsinline webkit-playsinline>
+            <source src="assets/background.mp4" type="video/mp4">
         </video>
 
         
@@ -964,7 +964,7 @@
 
 
     <audio id="background-music" loop>
-        <source src="https://github.com/collector-king/socials/raw/refs/heads/main/SpotiDownloader.com%20-%20Beam%20Trick%20-%20VampViolence.mp3" type="audio/mp3">
+        <source src="https://github.com/collector-king/socials/raw/refs/heads/main/SpotiDownloader.com%20-%202TONE%20-%20Yeat.mp3" type="audio/mp3">
     </audio>
 
 
