--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             position: fixed;
             width: 40px;
             height: 40px;
-            background: url('https://github.com/collector-king/socials/blob/main/GreyOsuCross_2.png?raw=true') no-repeat center center;
+            background: url('https://github.com/collector-king/socials/blob/main/icons8-sphere-50.png?raw=true') no-repeat center center;
             background-size: contain;
             pointer-events: none;
             z-index: 9999;
@@ -883,10 +883,10 @@
 
                 <div class="social-links">
                     <a href="<https://discord.com/users/1246792868186689559>" target="_blank">
-                        <img src="https://regional-aquamarine-u5sg7xuhel.edgeone.app/crvt.co-bxl-discord-alt.png" alt="Discord" class="social-icon">
+                        <img src="https://github.com/collector-king/socials/blob/main/Logo3.png?raw=true" alt="Discord" class="social-icon">
                     </a>
-                    <a href="https://github.com/JAQLIV" target="_blank">
-                        <img src="assets/github.png" alt="GitHub" class="social-icon">
+                    <a href="https://serveryy.vercel.app/" target="_blank">
+                        <img src="assets/Serveryy.png" alt="Serveryy" class="social-icon">
                     </a>
                 </div>
 
