--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
             <div class="profile-footer">
 
                 <div class="social-links">
-                    <a href="<https://discord.com/users/1246792868186689559>" target="_blank">
+                    <a href="https://discord.com/users/1246792868186689559" target="_blank">
                         <img src="https://github.com/collector-king/socials/blob/main/Logo3.png?raw=true" alt="Discord" class="social-icon">
                     </a>
                     <a href="https://serveryy.vercel.app/" target="_blank">
