--- a/index.html
+++ b/index.html
@@ -888,6 +888,9 @@
                     <a href="https://serveryy.vercel.app/" target="_blank">
                         <img src="assets/Serveryy.png" alt="Serveryy" class="social-icon">
                     </a>
+                    <a href="https://f-e.mysellauth.com" target="_blank">
+                        <img src="assets/Logoa.jpg" alt="Serveryy" class="social-icon">
+                    </a>
                 </div>
 
 
